# vent

./: .dockerignore  .env  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Design Document.md  Dockerfile  LICENSE  README.MD  calendar.ics  config.toml  create-multiple-postgresql-databases.sh  devenv.nix  docker-compose.yml  fly.toml  manifest.json  rust-toolchain.toml  sqlx-data.json  student_spreadsheet.csv  student_spreadsheet.xlsx
.github/: FUNDING.yml
.github/workflows/: ci.yml  (+2 more)
.sqlx/: query-057dce8d313ff81be3ca4ebdcdfaccce06ac212f4d1fdda701a115da14c2ebb8.json  query-0892bee0b2ae24b25dc3e969cbefa8320890f98012ce06e7034236d46a481e26.json  query-0d1330f3997da23c1a1d97e248141ec63a3c0b69f0aa5bb9a614642bbc957054.json  query-0d4d698b039ac95743392f44379bd1b8881297a06d0e0d333b065aec5d9da24e.json  query-0e7ca59c51e6c07099867c8a885ecc1e35a3b950af47d07485aebeb36c4f26bc.json  query-10315ae72795831c5371cccd49599543d5b5804231bd394fc59b3f9509f18c9d.json  query-11913ae63ce9cbec9983eda067f94e221a531e20b4f555b029860131f4837a53.json  query-1219fa0d33d583fffc72277a9af9a5b7ddcd4cb2df33f59973c4908feddd5de2.json  query-121a42b8cbe453c9b56c37e4da712216c8bfdb6e76929e32712369c7ba9e72d1.json  query-140fe3f5871890b1b4771cf8224eedfdb405cab17206c0c44df68978e3c1a6ef.json  query-1de41a560bb27df8e97dfc5e2665f287331fb11901ec7e4d8420981aac8d67bf.json  query-20285467dd8fdf894057b73cd294f896acdee0fb73473c9479b95dbfea48c3d0.json  query-249cb744a5c5f9f512ade6ad85e9efc747e3a51db8f7e02fd423cfb65b387f57.json  query-25810b76b2339222ddc6c22e6b9f4a14ba8644b69662b618d788f681f4c554db.json  query-26a6176a1a02e5befb8565284e3f034996247540de9243dcf31b5ac0576d185f.json  query-282ebd61fd60f48e4f56d5dbb5d3cc916332702148ac234718016fdbce870cb0.json  query-2e6d21a66ade268ae6cc19305763c26fbf8c265d129c2b02637b3862d54dd1b2.json  query-33c501d39ca87e1aa6b4344377f85dc35dde8126be2899fa12039e632766fb71.json  query-344d6a69cbd642ccb29c963526513eeb7e64d7e9bc7b1d45a2f0b7ffc67c62ee.json  query-35fab83e059fd070e30401e40f29325ca25bcb0dd040dbe72574c098383ef911.json  query-383e38705aa89634fb6851ebc7e2603c8400b4ff9d883aca286fd739e818b9bb.json  query-388084139e4a0578e00081d7a6b55c42d814f89c53c3fa6e2164c798d54b7814.json  query-3b667b38b142ae766b2a5b69a797688281c90bcaa8ee549aa3048dfb78cb10c2.json  query-3d47dc6f0f1bc2e9322553f41c623299a29ca080d6efd6ae05d893161ac9bbac.json  query-3d481e488039cd2bb614d5508b02f79531f6c60ecf0be5bfd94f5e519519b766.json  query-427f9bec5db52450eb7a7eaf441ecab056d466efa7b8418c0cf9c3ba7df5f575.json  query-44b7dfb0c4d282aabf717dd399fbb5628dd0f734846734c559d09ca2201cc428.json  query-46bd160452f4dca7e269282883603fb6576762dfb8639c9eb898a230aba5bb05.json  query-4b0781875c6539c700e0916356bebf626be3152cd589de09008ce9299af17ea8.json  query-4b8bbc50c45788608de6aed721d969f1ef3298e089f696935124ea73b345907b.json  query-4c249f2908743cf4c70282fa52b3da2e9cb8359b5090423d74703b7021d22d5b.json  query-4e61eef9f16003fa3397f784c5e3c1d983fed236adb50cd307596d236175b10a.json  query-53b2efb234c95d0a0a87780dc1ce4fbee8e648674ec25aa2fadd45a921de699c.json  query-53f49d19f8086730e9a1ebea0c05954021f566ddfde81003199c007cbd7f2add.json  query-545afaf57e171b04965fba03c8e20fb336df0139568343d4a9d331af497b2f81.json  query-5aee17fbf857c0a0614f9ab00267c1811cb8156c68a640b981af93f6bde7bd5d.json  query-5c644da9f45d65ece8daad9b75d8c0d3180d5ca6427427ce9ff02f162bec38a5.json  query-5e121dd3d77d0506ef59dd24bb3611f49d44979cadb7e9810a6254d505662c77.json  query-5f7453aefb4934a29ee78d6eaa25e6b63ace2622bc4583379c983e42f0c309f2.json  query-5f7d15040e8ba107420dc16605fa573f915855e41b0853ff0c11ddd924e61aea.json  (+62 more)
migrations/: 20230504185407_knot_db.sql  20230510190129_knot_db.down.sql  20230510190129_knot_db.up.sql  20230512195524_event_relations_serial.down.sql  20230512195524_event_relations_serial.up.sql  20230513112413_auth.up.sql  20230516204448_photos.down.sql  20230516204448_photos.up.sql  20230518213616_year_groups.down.sql  20230518213616_year_groups.up.sql  20230525200856_auth.up.sql  20230526160704_auth-roles.down.sql  20230526160704_auth-roles.up.sql  20230528202747_zip-hashes.down.sql  20230528202747_zip-hashes.up.sql  20230530091120_session_store.down.sql  20230530091120_session_store.up.sql  20230531172127_migrate-users-to-people.down.sql  20230531172127_migrate-users-to-people.up.sql  20230601091024_no-more-is-prefects.down.sql  20230601091024_no-more-is-prefects.up.sql  20230602194226_fnsnn-to-username.down.sql  20230602194226_fnsnn-to-username.up.sql  20230603161922_add-temp-ids.down.sql  20230603161922_add-temp-ids.up.sql  20230606170636_pg-sessions.up.sql  20230629162521_accountability.down.sql  20230629162521_accountability.up.sql  20230703163341_rewards.down.sql  20230703163341_rewards.up.sql  20231109211539_axum_login_7.down.sql  20231109211539_axum_login_7.up.sql  20240805200553_bonus_points.down.sql  20240805200553_bonus_points.up.sql  20240820062611_locking_events.down.sql  20240820062611_locking_events.up.sql  20240823080745_house_points_for_winning.down.sql  20240823080745_house_points_for_winning.up.sql
public/: manifest.json  offline.html  purple.css  sw.js
src/: auth.rs  cfg.rs  error.rs  event.rs  image_format.rs  index.rs  liquid_utils.rs  main.rs  routes.rs  state.rs
www/: add_event.liquid  add_new_user.liquid  add_password.liquid  add_people_to_event.liquid  add_person.liquid  csv.liquid  edit_person.liquid  edit_self.liquid  edit_user.liquid  eoy_migration.liquid  failed_auth.liquid  give_bonus_point.liquid  index.liquid  login.liquid  public_index.liquid  remove_stuff.liquid  rewards.liquid  server_error.html  show_all.liquid  show_bonus_points.liquid  show_events.liquid  show_people.liquid  update_bonus_point.liquid  update_event.liquid
(+42 files in other folders)
