[package]
name = "knot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["form", "tracing", "macros", "headers", "multipart"] }
axum-extra = { version = "0.8.0", features = ["form"] }
chrono = { version = "0.4.26", features = ["rkyv", "serde", "clock"] }
chrono-tz = "0.8.3"
icalendar = { version = "0.15.7", features = ["chrono-tz"] }
dotenvy = "0.15.7"
liquid = "0.26.4"
serde = "1.0.188"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "json", "offline"] } # Need to stay on 0.6.3 because that breaks axum-login for some reason?
thiserror = "1.0.44"
tokio = { version = "1.30.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
walkdir = "2.4.0"
image = "0.24.7"
rand = "0.8.5"
async_zip = { version = "0.0.15", features = ["tokio", "tokio-fs", "deflate"] }
csv-async = { version = "1.2.6", features = ["tokio"] }
tower-http = { version = "0.4.3", features = ["trace"] }
rust_xlsxwriter = {version = "0.49.0", features = ["chrono"]}
axum-login = { version = "0.6.0", features = ["sqlx", "postgres"] }
bcrypt = "0.15.0"
eyre = "0.6.8"
once_cell = "1.18.0"
new_mime_guess = { version = "4.0.1", default-features = false }
reqwest = { version = "0.11.18", features = ["json"] }
async-trait = "0.1.72"
http = "0.2.9"
itertools = "0.11.0"
lettre = { version = "0.10.4", features = ["tokio1", "tokio1-rustls-tls", "rustls-tls", "tracing", "builder", "smtp-transport"], default-features = false }
futures = { version = "0.3.28", default-features = false }
serde_json = "1.0.104"
tower = { version = "0.4.13", features = ["limit"] }
tokio-util = { version = "0.7.8", features = ["io"] }