[package]
name = "vent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["form", "tracing", "macros", "headers", "multipart"] }
axum-extra = { version = "0.8", features = ["form"] }
chrono = { version = "0.4", features = ["rkyv", "serde", "clock"] }
chrono-tz = "0.8"
icalendar = { version = "0.15", features = ["chrono-tz"] }
dotenvy = "0.15"
liquid = "0.26"
serde = "1.0"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "json", "offline"] } # Need to stay on 0.6.3 because that breaks axum-login for some reason?
tokio = { version = "1.33", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
walkdir = "2.4"
image = "0.24"
rand = "0.8"
async_zip = { version = "0.0.15", features = ["tokio", "tokio-fs", "deflate"] }
csv-async = { version = "1.2", features = ["tokio"] }
tower-http = { version = "0.4", features = ["trace"] }
rust_xlsxwriter = {version = "0.54", features = ["chrono"]}
axum-login = { version = "0.6", features = ["sqlx", "postgres"] }
bcrypt = "0.15"
once_cell = "1.18"
new_mime_guess = { version = "4.0", default-features = false }
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
http = "0.2"
itertools = "0.12"
lettre = { version = "0.11", features = ["tokio1", "tokio1-rustls-tls", "rustls-tls", "tracing", "builder", "smtp-transport"], default-features = false }
futures = { version = "0.3", default-features = false }
serde_json = "1.0"
tower = { version = "0.4", features = ["limit"] }
tokio-util = { version = "0.7", features = ["io"] }
config = "0.13"
url = { version = "2.4", features = ["serde"] }
snafu = "0.7.5"
eyre = "0.6"
