[package]
name = "vent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = [
  "form",
  "tracing",
  "macros",
  "multipart",
] }
axum-extra = { version = "0.9", features = ["form"] }
chrono = { version = "0.4", features = ["rkyv", "serde", "clock"] }
icalendar = { version = "0.16", features = ["chrono-tz"] }
dotenvy = "0.15"
liquid = "0.26"
serde = "1.0"
sqlx = { version = "0.7", features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
  "chrono",
  "json",
] }
tokio = { version = "1.37", features = ["rt", "rt-multi-thread", "time", "macros", "sync", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
walkdir = "2.5"
rand = "0.8"
async_zip = { version = "0.0.17", features = ["tokio", "tokio-fs", "deflate"] }
csv-async = { version = "1.3", features = ["tokio"] }
tower-http = { version = "0.5", features = ["trace"] }
rust_xlsxwriter = { version = "0.70", features = ["chrono"] }
axum-login = "0.15"
bcrypt = "0.15"
once_cell = "1.19"
new_mime_guess = { version = "4.0", default-features = false }
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
http = "1.1"
itertools = "0.13"
lettre = { version = "0.11", features = [
  "tokio1",
  "tokio1-rustls-tls",
  "rustls-tls",
  "tracing",
  "builder",
  "smtp-transport",
], default-features = false }
futures = { version = "0.3", default-features = false }
serde_json = "1.0"
tower = { version = "0.4", features = ["limit"] }
tokio-util = { version = "0.7", features = ["io"] }
config = "0.14"
snafu = "0.8"
strum = { version = "0.26", features = ["derive"] }
time = "0.3"
tower-sessions = { version = "0.12" }
hyper-util = "0.1"
hyper = "1.3"
http-body = "1.0"
http-body-util = "0.1"
heck = "0.5.0"
